--- a/集装箱设计思考.md
+++ b/集装箱设计思考.md
@@ -1,10 +1,44 @@
+5.69 * 2.13 * 2.18
+
 # 光
 
+<https://www.glazingvision.co.uk/get-inspired/using-rooflights-to-create-light-ventilation-and-space/>
+
+<https://www.firsttheseedfoundation.org/resource/tomatosphere/background/sunlight-mars-enough-light-mars-grow-tomatoes/>
+
 # 水
+
+1. 滴
+
+2. 喷水
+
+   ![æ°æ¬¾å¯è°å¼éå·é¾åå·å¤´/å­èºæµè±æµçå¾®å·å¤´/å·é¾å¨éæ¸©å·å¤´](https://img.alicdn.com/img/bao/uploaded/i4/i2/3066040634/TB2Dt6taSFjpuFjSspbXXXagVXa_!!3066040634.jpg_420x280Q50s50.jpg_.webp)
+
+   <https://item.taobao.com/item.htm?id=567166295477&ali_refid=a3_430750_1006:1124383032:N:0zZz1%2BeVRSSaEsRDe%2Bw4P32trDRs9%2Fqc:beab11eb70308e61fd9724f3668e5744&ali_trackid=1_beab11eb70308e61fd9724f3668e5744&spm=a21wu.10013406.0.0>
+
+   
 
 # 土壤
 
 # 植物
 
 1. 原生植物
+
 2. 水生植物
+
+3. 空气植物 <https://www.hemleva.com/airplants>
+
+   
+
+# 数据可视化
+
+nowhere
+
+![FireShot Capture 001 - N O W H E R E - - www.nowhere.international](C:\Users\张逸泽\Desktop\notes\FireShot Capture 001 - N O W H E R E - - www.nowhere.international.png)
+
+# 空气穿插之
+
+# 火星计划
+
+1. 火星上的重力加速度约为地球的三分之一，这也就意味着构造悬空的结构更加简单
+
