--- a/思想.md
+++ b/思想.md
@@ -2,24 +2,45 @@
 
 ## 做事情的方法
 
-1. 先理清事情的基本结构：
+1. 客观分析事情的基本结构：
 
    input是什么
 
    output是什么
 
-   原则是什么（事件的关键性质，如：每天复习一次、不要研究代码等）
+   事件的结构是什么
 
-2. 明确事件效果是是什么
+2. 主观分析事情对个人的关键点：与个人情绪影响最大的点
 
-3. 迭代结构理解
+   例如原则是什么（事件的关键性质，如：每天复习一次、不要研究代码）
 
-4. 结合效果将事件分为能够快速产生效果的模块化部分（敏捷软件开发理论）
+   痛点是什么
 
-### 抽象理论的过程
+   效果是什么
+
+3. 通过进一步的试验，迭代结构理解和个人关键点理解
+
+4. 结合事件结构和主观原则对事件进行安排（敏捷软件开发理论）
+
+### 执行做事情的方法的原则
+
+1. 坚决执行基本的规则，并且做到方便每个步骤
+2. 注重落实
+
+
+
+### 迭代理解的过程
 
 纸张上 — 笔记 — 书
 
 意识的清晰度有一个递增的过程
 
 将需要检验的理论抽象化模块化对比实验
+
+
+
+### 划分模块的过程
+
+1. 对于事件可以被重复模块划分，则使用模块化划分
+2. 对于可以分为阶段的事件，分为阶段后模块化划分
+3. 对于未知事件，需要安排2-3个预定模块以及时间
