--- a/做笔记.md
+++ b/做笔记.md
@@ -1,16 +1,76 @@
 # 做笔记分析：
 
-通过文字操作来记录信息、辅助分析、X调整情绪X
-
 ## INPUT：文字记录 || 整理 || 精简
 
 文字记录 || 文字整理 || 文字精简
 
 * 文字记录：记录文字，表达关键意思
 
-## STRUCT：钻石结构，先长后磨
+## STRUCT：
 
-有不能确定的理论先使用假设方法
+#### 记录笔记
+
+* INPUT
+
+  * 初次记录笔记
+
+  * 了解到新的相关知识，进行补充
+
+    T：新老知识无法分开，无法高效复习
+
+    B：知识体系化
+
+    -》
+
+    A：git pull history -> 新的知识 
+
+    ​	   正常体系化笔记
+
+    ​	   X能否使用git的pull历史来找到新学习的知识X
+
+* STRUCT
+
+  钻石结构：生琢
+
+  P：生 - 最快最精准表达意思的方式记录文字
+
+  P：琢 - 简单明了 传意准确
+
+* OUTPUT
+
+  * 体系化的笔记
+
+    B：整洁笔记
+
+    B：系统知识
+
+#### 调整笔记
+
+* STRUC
+
+  设置隔离区  A：使用三个分割线来分开区域
+
+  -先除杂项
+
+  -缩小范围
+
+  -集中处理
+
+  -D
+
+#### 搜查笔记
+
+* INPUT
+* STRUC
+* OUTPUT
+
+#### 复习笔记
+
+* INPUT
+* STRUC
+* OUTPUT
+
+
 
 ## OUTPUT：辅助记忆 || 分析 || 决策
 
@@ -28,38 +88,74 @@
 
   通过可视化的形式来进行有规则的决策
 
-## KEY POINTS
+## PRINCIPLE：生琢 可视 分区
 
-X应该将常用的习惯的笔记用最少的记录，将记录性质弄的分类别多个笔记记录X
+* 生琢
+  * 生 - 最快最精准表达意思的方式记录文字
+  * 琢 - 简单明了 传意准确
+* 可视
+  * 大纲<->大结构->大致内容
+  * 可视化的方法记录笔记
 
-要有大纲，大纲就是大结构，通过设计，让大纲成为大结构
+## TRAP：杂乱 冗长
 
-X尽量使用可视化的方法来记录笔记X
+* 每需从头观看学习
+* 每需从头整理笔记
 
-笔记需要精简结论
+## BENIFIT：清爽 叠加
+
+* 清爽的笔记会让人产生成就感
+* 笔记的叠加会让人越来越想写
+* 清爽的笔记如果有追随者会有成就感
+* 如果笔记十分好用以至于经常能够用到能让人感到使用感
 
 
 
 # 做笔记决策：
 
-使用X文字X表示假设和实验
+- P保持感觉-快速实验-反复修改
 
-使用-》或者->表示因果导致，带上百分比表示影响程度
+- P简洁明了 传意准确
 
-使用《-》或者<->表示互相推导
+  -》
 
-使用-><表示部分反推
+  * 大纲<->大结构->大致内容
 
-使用 - 表示流程
+  * 可视化 {-符号 {-图表 来表达
 
-使用 = 表示输入输出
+    -> 
 
-使用A}-B表示A属于B
+    * 笔记符号
 
-使用A{-B表示A包含B
+- T每需要从头整理笔记
 
-使用A[]B表示AB交集
+  -》
 
-使用[AB]表示AB并集
+  * 分区处理：待整理、已整理
+  * 对笔记的区域划分要模块化，方便我们进行分区工作和记忆
 
-使用A[B]表示差集
+### 笔记符号
+
+| 符号        | 含义                        |
+| ----------- | --------------------------- |
+| X文字X      | 假设和实验                  |
+| -》/ ->  x% | 因果导致 百分比表示影响程度 |
+| 《-》/ <->  | 互相推导                    |
+| -><         | 部分反推                    |
+| -           | 流程关系                    |
+| =           | INPUT OUTPUT                |
+| A}-B        | A属于B                      |
+| A{-B        | A包含B                      |
+| A[]B        | AB交集                      |
+| [AB]        | AB并集                      |
+| A[B]        | A差B集                      |
+| D           | 迭代                        |
+| T           | 痛点                        |
+| B           | 反馈点                      |
+| P           | 原则                        |
+|             |                             |
+|             |                             |
+|             |                             |
+|             |                             |
+
+X需要固定时间来记录笔记、整理笔记等X
