--- a/思想.md
+++ b/思想.md
@@ -16,7 +16,7 @@ X
 
 
 
-## 人做事情的常规流程
+## 人做事情的常规流程是...
 
 动机 — 观察 — 分析 — 决策 — 行为 — 反馈
 
@@ -62,35 +62,50 @@ X
 
 * 反馈：达到目标后的反馈来重新激励人们的动机和情绪等
 
-## 分析方法
+## 分析方法概论
 
-1. 逻辑分析：
+### 外在分析：INPUT - OUTPUT - STRCUCT 分析方法
 
-   input是什么
+* input是什么
 
-   output是什么
+* output是什么
 
-   事件的结构是什么
+* 事件的结构是什么
 
-1. 主观分析事情对个人的关键点：与个人情绪影响最大的点
+### 内在分析：PRINCIPLE - TRAP - BENEFIT
 
-   例如原则是什么（事件的关键性质，如：每天复习一次、不要研究代码）
+* 痛点：比如最容易产生挫败感的点
+* 原则：可以保持并且依赖的点
+* 反馈：最容易产生效果从而刺激你的点
 
-   痛点是什么
+即需要从外在分析->内在分析->最终决策的链子
 
-   效果是什么
-
-2. 通过进一步的试验，迭代结构理解和个人关键点理解
-
-3. 结合事件结构和主观原则对事件进行安排（敏捷软件开发理论）
-
-##  决策方法
-
-1. 每个步骤清晰可见
-2. X每个步骤需要一个实例去解释X
-3. 注重落实
+也需要内在分析 最终决策的归类
 
 
+
+### 迭代分析：反馈 - 观察 - 分析
+
+* 通过进一步的试验，迭代结构理解和个人关键点理解
+
+* 结合事件结构和主观原则对事件进行安排（敏捷软件开发理论）
+
+##  决策方法概论
+
+​			内在分析->初步策略=外在分析->修正策略
+
+1. 由内在分析的结论去指导我们的决策
+2. 每个步骤清晰可见
+3. X每个步骤需要一个实例去解释X
+4. 注重落实
+
+
+
+### 划分模块的过程
+
+1. 对于事件可以被重复模块划分，则使用模块化划分
+2. 对于可以分为阶段的事件，分为阶段后模块化划分
+3. 对于未知事件，需要安排2-3个预定模块以及时间
 
 ### 迭代理解的过程
 
@@ -102,8 +117,4 @@ X
 
 
 
-### 划分模块的过程
-
-1. 对于事件可以被重复模块划分，则使用模块化划分
-2. 对于可以分为阶段的事件，分为阶段后模块化划分
-3. 对于未知事件，需要安排2-3个预定模块以及时间
+3. 
