--- a/做笔记.md
+++ b/做笔记.md
@@ -1,12 +1,15 @@
 # 做笔记分析：
 
-## INPUT：文字记录 || 整理 || 精简
+## 外在分析
+
+### INPUT：文字记录 || 整理 || 精简
 
 文字记录 || 文字整理 || 文字精简
 
-* 文字记录：记录文字，表达关键意思
+* 电脑记录
+* 手机记录
 
-## STRUCT：
+### STRUCT：
 
 #### 记录笔记
 
@@ -70,9 +73,7 @@
 * STRUC
 * OUTPUT
 
-
-
-## OUTPUT：辅助记忆 || 分析 || 决策
+### OUTPUT：辅助记忆 || 分析 || 决策
 
 记录信息 || 辅助分析 || 辅助规划决策 ||（X调整情绪和反馈）
 
@@ -88,7 +89,9 @@
 
   通过可视化的形式来进行有规则的决策
 
-## PRINCIPLE：生琢 可视 分区
+## 内在分析
+
+### PRINCIPLE：生琢 可视 分区
 
 * 生琢
   * 生 - 最快最精准表达意思的方式记录文字
@@ -97,12 +100,12 @@
   * 大纲<->大结构->大致内容
   * 可视化的方法记录笔记
 
-## TRAP：杂乱 冗长
+### TRAP：杂乱 冗长
 
 * 每需从头观看学习
 * 每需从头整理笔记
 
-## BENIFIT：清爽 叠加
+### BENIFIT：清爽 叠加
 
 * 清爽的笔记会让人产生成就感
 * 笔记的叠加会让人越来越想写
