事件结构和决策的区别分不清楚

--- a/做笔记.md
+++ b/做笔记.md
@@ -17,7 +17,7 @@
 
   * 初次记录笔记
 
-  * 了解到新的相关知识，进行补充
+  * 补充笔记
 
     T：新老知识无法分开，无法高效复习
 
@@ -51,7 +51,7 @@
 
 * STRUC
 
-  设置隔离区  A：使用三个分割线来分开区域
+  设置隔离区  A：使用小标题来分割
 
   -先除杂项
 
@@ -88,6 +88,8 @@
 * 辅助决策：
 
   通过可视化的形式来进行有规则的决策
+
+![1565784970267](C:\Users\inferno\Documents\notes\笔记分析：外在-内在分析图)
 
 ## 内在分析
 
@@ -137,6 +139,8 @@
   * 分区处理：待整理、已整理
   * 对笔记的区域划分要模块化，方便我们进行分区工作和记忆
 
+![1565785233152](C:\Users\inferno\Documents\notes\笔记决策)
+
 ### 笔记符号
 
 | 符号        | 含义                        |
@@ -162,3 +166,11 @@
 |             |                             |
 
 X需要固定时间来记录笔记、整理笔记等X
+
+X决策和STRUCT混乱，
+
+分析是一个自分析的过程？
+
+那么决策和分析的区别到底在那里？
+
+事情有哪些和人有关，和决策有关，那些和人没有关系是否要分开X
