--- a/思想.md
+++ b/思想.md
@@ -2,6 +2,8 @@
 
 
 
+##### unfix
+
 区分时间上先后顺序和逻辑上先后顺序的方法就是将这两件事情倒过来看是否可以发生
 
 X
@@ -12,11 +14,13 @@ B =									   FALSE = 逻辑顺序（A->B \ B->A）
 
 X
 
+##### unfix
 
+## 生物存在价值分析：熵减
 
+熵减
 
-
-## 人做事情的常规流程是...
+## 人类行为分析
 
 动机 — 观察 — 分析 — 决策 — 行为 — 反馈
 
@@ -78,21 +82,51 @@ X
 * 原则：可以保持并且依赖的点
 * 反馈：最容易产生效果从而刺激你的点
 
-即需要从外在分析->内在分析->最终决策的链子
+### 迭代分析：反馈 - 观察 - 分析
+
+- 明确更好的动机或者目标或者感觉
+
+  -观察正还是负反馈
+
+  -反思观察 分析 决策
+
+  
+
+### 分析的内在分析
+
+#### PRINCIPLE
+
+* 链式法则：三层
+
+  ​					分析-PTB-策略
+
+  ​					或者：分析 - PTB1   -
+
+  ​								分析 - PTB2   -  A
+
+  T：链条繁杂 -》链条变得清楚可见
+
+  XA0: 分为两层，一层分析-PTB，一层PTB-A
+
+  XA1:使用图表软件处理 
+
+
+
+#### TRAP
+
+#### BENEFIT
+
+
+
+###### unfix
 
 也需要内在分析 最终决策归类
 
 
 
-### 迭代分析：反馈 - 观察 - 分析
-
-* 通过进一步的试验，迭代结构理解和个人关键点理解
-
-* 结合事件结构和主观原则对事件进行安排（敏捷软件开发理论）
-
 ##  决策方法概论
 
-​			内在分析->初步策略=外在分析->修正策略
+​			归类A
 
 1. 由内在分析的结论去指导我们的决策
 2. 每个步骤清晰可见
@@ -109,12 +143,24 @@ X
 
 ### 迭代理解的过程
 
-纸张上 — 笔记 — 书
-
 意识的清晰度有一个递增的过程
 
 将需要检验的理论抽象化模块化对比实验
 
 
 
-3. 
+## 艺术：做事至极
+
+* 极致的技术
+* 极致的情感
+* 极致的理念
+
+### 我的艺术是什么
+
+极致的技术 自我
+
+
+
+##### unfix
+
+
