--- a/做笔记.md
+++ b/做笔记.md
@@ -46,6 +46,13 @@
     B：整洁笔记
 
     B：系统知识
+    
+  * STRUC：
+  
+    * 思想
+    * 技术
+    * 心得
+    * 笔记
 
 #### 调整笔记
 
@@ -105,12 +112,12 @@
 * 每需从头观看学习
 * 每需从头整理笔记
 
-### BENIFIT：清爽 叠加
+### BENIFIT：清爽 叠加 规划
 
-* 清爽的笔记会让人产生成就感
-* 笔记的叠加会让人越来越想写
-* 清爽的笔记如果有追随者会有成就感
-* 如果笔记十分好用以至于经常能够用到能让人感到使用感
+* 清爽-》成就感
+* 知识叠加
+* 追随者
+* 科学精神
 
 
 
@@ -156,9 +163,19 @@
 | T           | 痛点                        |
 | B           | 反馈点                      |
 | P           | 原则                        |
-|             |                             |
+| Q           | 问题                        |
 |             |                             |
 |             |                             |
 |             |                             |
 
 X需要固定时间来记录笔记、整理笔记等X
+
+X不断提出问题才有提出问题的能力X
+
+
+
+
+
+
+
+Q：为什么不能够稳定做笔记
