--- a/思想.md
+++ b/思想.md
@@ -74,7 +74,7 @@ X
 
 ### 内在分析：PRINCIPLE - TRAP - BENEFIT
 
-* 痛点：比如最容易产生挫败感的点
+* 痛点：产生挫败感的点
 * 原则：可以保持并且依赖的点
 * 反馈：最容易产生效果从而刺激你的点
 
@@ -98,6 +98,8 @@ X
 2. 每个步骤清晰可见
 3. X每个步骤需要一个实例去解释X
 4. 注重落实
+5. X如何执行决策？如何保证反馈和计划能够不冲突？X
+6. X决策分为长时决策、短时决策X
 
 
 
@@ -115,6 +117,9 @@ X
 
 将需要检验的理论抽象化模块化对比实验
 
+## 控制失败
 
 
-3. 
+
+
+
