--- a/思想.md
+++ b/思想.md
@@ -159,6 +159,12 @@ X
 
 极致的技术 自我
 
+### 失败研究
+
+* 黄金尝试 只花费时间的失败
+* 白银尝试 人际交往上失败可能会导致下次困难 但是如果对方可替代 潜在危险是可能导致信誉危机
+* 黄金尝试-白银尝试-D -> 最低成本 做事情
+
 
 
 ##### unfix
