--- a/特效.md
+++ b/特效.md
@@ -4,7 +4,16 @@
 
 ### STRUCT
 
-Q：如何只使用transform制作效果
+#### 使用transform和copy和for来制作效果
+
+
+##### 一维物体
+
+for遍历点集 - copy物体 - detail('../foreach_matadata','iteration',0) -> copy的物体的参数
+
+##### 二维物体
+
+for遍历点集 - 点集@ptnum/detail标记到点的属性parameter之中 - 使用parameter -> 物体参数
 
 Q：如何更快的对对象进行分类？primitive概念到底是什么？
 
@@ -13,7 +22,7 @@ Q：如何更快的对对象进行分类？primitive概念到底是什么？
 
 Q：如何制作参数生成的面具
 
-Q：houdini中的solver是什么一种概念
+Q：进化游戏？
 
 ## 内在分析
 
