--- a/作业/个人空间/单人空间设计.md
+++ b/作业/个人空间/单人空间设计.md
@@ -83,3 +83,14 @@ https://tinyliving.com/valhalla-baluchon/
 
 1. 卫生间 私密 远离睡觉-吃饭等空间
 
+
+
+![space](C:\Users\inferno\Documents\notes\作业\个人空间\space.jpg)
+
+#### 空间尺度
+
+![1a748075fcaa84d28118df010ebd456a](C:\Users\inferno\Documents\notes\作业\个人空间\people1)![941463d2723499400c7a3ed0b8a1ed77](C:\Users\inferno\Documents\notes\作业\个人空间\people.jpg)
+
+
+
+![1567690880862](C:\Users\inferno\Documents\notes\作业\个人空间\sit.png)
