--- a/作业/个人空间/单人空间设计.md
+++ b/作业/个人空间/单人空间设计.md
@@ -4,29 +4,29 @@
 
 ### go vertical
 
-##  ![Heirloom Tiny Home - Tiny House Swoon](C:\Users\inferno\Documents\notes\作业\个人空间\3.jpg)![Can You Believe This Tiny House Sleeps 8 People_](C:\Users\inferno\Documents\notes\作业\个人空间\2.jpg)
+##  ![Heirloom Tiny Home - Tiny House Swoon](.\2.jpg)
 
 ### 多功能
 
-![1567685549431](C:\Users\inferno\Documents\notes\作业\个人空间\0)
+![1567685549431](.\0)
 
 ### 所有灯光都在墙上
 
-![1567685632814](C:\Users\inferno\Documents\notes\作业\个人空间\1)
+![1567685632814](.\1)
 
 ### 爬梯设计
 
-![Maisons sur l'eau - PLANETE DECO a homes world](C:\Users\inferno\Documents\notes\作业\个人空间\5.jpg)
+![Maisons sur l'eau - PLANETE DECO a homes world](.\5.jpg)
 
-![Little Cottonwood Tiny House on Wheels](C:\Users\inferno\Documents\notes\作业\个人空间\4.jpg)
+![Little Cottonwood Tiny House on Wheels](.\4.jpg)
 
-![70+ College Dorm Room University of Kansas » helpwritingessays_net #college #dormroom #dormroomideas](C:\Users\inferno\Documents\notes\作业\个人空间\0.png)
+![70+ College Dorm Room University of Kansas » helpwritingessays_net #college #dormroom #dormroomideas](.\0.png)
 
 https://tinyliving.com/sweet-dream-incredible-tiny-homes/
 
 ### 采光
 
-![img](C:\Users\inferno\Documents\notes\作业\个人空间\6.jpg)
+![img](.\6.jpg)
 
 https://tinyliving.com/topanga-handcrafted-movement/
 
@@ -34,7 +34,7 @@ https://tinyliving.com/topanga-handcrafted-movement/
 
 https://tinyliving.com/fairview-tiny-house-building-company/
 
-![Desk - Valhalla by Baluchon](C:\Users\inferno\Documents\notes\作业\个人空间\vava.jpg)
+![Desk - Valhalla by Baluchon](.\vava.jpg)
 
 https://tinyliving.com/valhalla-baluchon/
 
@@ -85,12 +85,12 @@ https://tinyliving.com/valhalla-baluchon/
 
 
 
-![space](C:\Users\inferno\Documents\notes\作业\个人空间\space.jpg)
+![space](.\space.jpg)
 
 #### 空间尺度
 
-![1a748075fcaa84d28118df010ebd456a](C:\Users\inferno\Documents\notes\作业\个人空间\people1)![941463d2723499400c7a3ed0b8a1ed77](C:\Users\inferno\Documents\notes\作业\个人空间\people.jpg)
+![1a748075fcaa84d28118df010ebd456a](.\people1)![941463d2723499400c7a3ed0b8a1ed77](.\people.jpg)
 
 
 
-![1567690880862](C:\Users\inferno\Documents\notes\作业\个人空间\sit.png)
+![1567690880862](.\sit.png)
