--- a/视频脚本：.md
+++ b/视频脚本：.md
@@ -5,32 +5,32 @@
 1. 品牌分析：
 
    * 品牌理念(探索与创新) 
-   * 品牌形象(年轻/创新/美) 
-   * 产品定位(手机连接人与人) 
-   * 门店定位(汇聚人) 
-   * 线上OPPO社区 /线下活动(OPPO影像学院/全球青年创作计划等) → 充满活力与创意的**社区**
+   * 从oppo出发 -》oppo矿石 -〉 质美科技 -》品牌形象(年轻/创新/美) 
+   * 产品定位(手机连接人与人)  -〉 o 形态连接人与人的暗示
+   * 品牌活动 线上OPPO社区 /线下活动(OPPO影像学院/全球青年创作计划等) → 产品潜意识：构建充满活力与创意的**社区**
+   * **最终得到门店定位(汇聚人) -> o**
 
-2. 品牌用户分析：
+2. 空间形态：对O的演绎
+
+   * 为什么使用O？
+
+3. 品牌用户分析：汇聚什么样子的人？
 
    ​	年龄：18-35岁年轻人
 
    ​	需求：音乐/摄影/闪充/游戏/个性化
 
-3. 设计内容确定：
+4. 设计内容确定：店铺有什么样子的内容？
 
    * oppo技术发展历程：音乐 → 摄影 → 闪充 → 游戏 
 
    * 未来畅想：定制(音乐/摄影/闪充/游戏……)
 
-4. 店铺系统(相互补充，构成完整的系统)
+5. 店铺系统(相互补充，构成完整的系统)
 
-   1. 店铺应当针对人群
-   2. 服务体系
+   1. 每种店铺应当针对人群
+   2. 每种店铺的服务体系
    3. 根据以上两点对选址确定
-
-5. 空间形态：对O的演绎
-
-   * 为什么使用O？
 
 ## 超级旗舰店方案：3min
 
