--- a/视频脚本：.md
+++ b/视频脚本：.md
@@ -34,28 +34,123 @@
 
 ## 超级旗舰店方案：3min
 
-1. o如何放在这个地址？
-   * 选址分析：位置/环境/人流/消费人群/交通/定位
+1. 选址分析30s
+   
+P：考虑到超级旗舰店的高端特性，我们决定将店铺开设在新天地最繁华的地带 - 淮海路和黄陂南路交叉口的k11，（地图显示）k11兼具艺术科技与oppo至美科技不谋而合（ae图片显示）我们首先对着周围的街区进行了人口密度的分析，我们发现周围有三个人口密度较大的区域（显示红圈），同时在对人流进行分析之后，我们得到了人流主要从到的结论（显示人流图），因此我们将主入口设置在，而附入口着设置面对k11的中心广场（入口显示）
+   
+2. o如何变成现在的空间形态？30s 0%
 
-2. o如何变成现在的空间形态？
-3. 空间样貌 + 活动机制 + 活动形式（从故事板的角度叙事）
-   * 音乐可视化
-   * 拍照
-   * 闪充
-   * 涂鸦
-   * 个性定制
-   * 智能家居
+   P：我们的超级旗舰店形态概念来源于oppo的o，（O形状显示）同时考虑到入口（高亮）决定将O的同心圆破掉（形状演示）为了让空间具有层次感，我们在墙体高度上做了调整（高度变化）最终得到我们最终的店铺形态
+
+   -镜头切到-
+
+3. P：我们希望我们的店铺营造一种不一样的氛围，因此用户在外面会体会不一样惊喜，外立面取自o的圆弧（视频高亮）的有机形，并且在夜晚会有华丽的投影（效果），同时入口的通道处（拉镜头）我们会有特殊的效果（效果），希望让店铺显得不是那么的直白
+
+   
+
+   P：超级旗舰店针对人群为年轻一代 主打手机定制化和oppo社区的营造
+
+   T：空间样貌 + 活动机制 + 活动形式（从故事板的角度叙事）150s 20% 小地图标志表示空间位置 0%
+
+   * 手机领取区域 0%
+
+     P：首先是我们的手机领取区域 在手机领取区域总可以领取不同种类oppo手机 而这个特殊手机则作为用户在这个店铺特殊令牌去体验店铺中创作区域的各种内容（出现手机和选择效果 *人拿到手机*）
+
+     -切镜头 *手机送到创作区小姐姐的手中*-
+
+   * 创作区域 0% 
+
+     P：创作区域分为两个区域，涂鸦区和音乐区
+
+     T：涂鸦区域 + 音乐区
+
+     
+
+     涂鸦区：
+
+     P：涂鸦区利用手机的空间定位技术让人们在电子墙面上尽情涂鸦，让在店铺中的大家可以一起创作，营造一种温馨的oppo社区氛围（三个小姐姐正在画最后oppo一笔），同时涂鸦结果可以保存提供给定制（ 手机显示可定制选项|手机蹦出来显示app界面）
+
+     
+
+     -切镜头
+
+      P：绘制好的涂鸦可以到我们的个性定制区域（*手机app界面切到定制区域*）-
+
+     音乐区：
+
+     P：音乐区使用了音乐可视化的形式，让人们在听到音乐的同时能够在视觉上同样感受到音乐，（音乐可视化效果）同时人们可以自己选择喜欢的音乐进行可视化，之后人们可以选择自己喜欢的画面保存下来提供给定制（手机显示界面）
+
+     -切镜头
+
+     P：在创作区创作出了自己心仪的图案后（音乐区涂鸦区镜头平分 手机内容传到定制区）用户可以将图案传到定制区域中-
+
+   * 个性定制 （3d打印显示）70%
+
+     P：定制区采用机械臂进行3d打印 （显示3d打印）用户可以选择打印自己的手机壳 配件 甚至画一张画 进度会在透明液晶玻璃瓶和用户手机上同时显示（平分镜头 同时显示） 在这期间用户可以继续创作或者来到休息区或者游戏区休息或者游戏
+
+     -切镜头（镜头拉伸-
+
+   * 闪充（休息区）
+
+     P：在游戏和休息的同时用户可能就需要充电，这时候就可以体会到oppo强大的闪充技术，我们将闪充动态显示在人们休息的座椅之中，让人们能够直观感受闪充的迅猛（人安放手机 闪充效果显示）
+
+     
+
+     -人视角拉镜头
+
+   补充：当人们离开这个店铺之后
+
+   P：我们希望当人们离开这个店铺之后，人们会对oppo的印象……，会对这个店铺怎么怎么样，梦一般的经历
+
+-ae转场特效-
 
 ## 旗舰店方案：1.5min
 
-* 5G
-* 游戏
-* 变焦拍照
+1. 选址：
+
+   P：对于旗舰店，我们调研后认为针对的人群应当为……，因此我们将店铺开设在周围有多个高校分布，学生等人群较为密集的五角场（ae图片分析），我们选择了合生汇二楼哪里哪里（外景镜头拉进来）
+
+   -切镜头（复杂切到简单）
+
+   形态：
+
+   P：同样旗舰店的造型仍然由O而来（O形态出现和产生陈最终店铺），但考虑到旗舰店服务的人群，它在空间上的语言简练很多
+
+   -切镜头（简单-》复杂）
+
+2. P：但这并不意味着我们的店铺就没有特色，我们希望我们的店铺拥有一个核心为用户提供便利，因此在中心我们拥有一个使用多个可移动屏幕的装置，一方面可以吸引人流（拉镜头的效果演示），另一方面当人们来中间站台观看手机时，人们能够看到手机的细节（分屏，效果）
+
+   在拥有这个特色区域的同时，旗舰店也保留了传统店铺应该有的功能，在店铺的右侧我们设置了四个体验区（效果）在四个体验区人们依然能够直接的体会到手机的各种不同的功能。
+
+   对于售后和维修区域，我们认为流程应当尽量简单明了，因此我们将区域设置在了入口靠左的区域（视频高亮），同时维修区并不设置视觉上的障碍，让用户在维修的时候能够轻松看到维修的进程，（效果显示），同时旁边有oppo最新的附属产品，用户可以在等待售后服务的过程中直接体验到oppo全部的产品链（产品链条显示）
+
+P：我们希望旗舰店……
 
 ##  快闪店方案：1.5min
 
-* 体验
-* 售卖流程(扭蛋机)
+1. 选址：
+
+   P：快闪店针对的人群是，我们选择的地址是上海中心拥有摩天轮的大悦城楼顶（楼顶模型生成），
+
+2. 形态生成：
+
+   P：快闪店我们依然从o元素出发（o形态），但是我们认为快闪店应当打破oppo常规的形象，我们将o的形态稍微扭了一下（扭形态），放在了摩天轮之前
+
+3. 功能展示：
+
+   P：对于快闪店，我们希望它能够有不同的使用场景和状态，因此我们采用可变化透明度的液晶玻璃作为建筑的外立面，通过外立面的变化容纳快闪店的不同种类和时间的活动（不同活动大致效果演示）
+
+   第一种（七夕情侣）：
+
+   T：建筑外观变化 + 具体活动镜头展示
+
+   第二种（）：
+
+   
+
+P：我们希望快闪店
+
+
 
  
 
