--- a/作业/oppo/5G技术等新兴科技应用案例.md
+++ b/作业/oppo/5G技术等新兴科技应用案例.md
@@ -35,3 +35,7 @@ https://www.manamana.net/video/detail?id=1248
 Fake UI![0](/Users/sunwuyi/Downloads/0.jpeg)
 
 https://www.manamana.net/video/detail?id=5387
+
+
+
+# 文件思想数目为-1个 文件单位思想为0.0
