--- a/作业/城市遗产 --- 校园中价值观与环境遗产的关联初步探究.md
+++ b/作业/城市遗产 --- 校园中价值观与环境遗产的关联初步探究.md
@@ -72,3 +72,7 @@
 
 1.  钱锋. 现代还是古典？文远楼建筑语言的重新解读. 时代建筑. 2009, (1).
 2. [邵逸夫与同济大学]( http://blog.sina.com.cn/s/blog_652847de0102e4bc.html)
+
+
+
+# 文件思想数目为1个 文件单位思想为0.05389382915656157
