--- a/读书笔记/心理学和生活.md
+++ b/读书笔记/心理学和生活.md
@@ -16,3 +16,7 @@
 
    1. 第一个阶段已经思考的很多，努力跑到正确的位置等等等。
    2. 第二个阶段，位置和深度线索开始发生作用。接到球之后还需要考虑扔到那里去，所以还会注意各种环境因素。
+
+
+
+# 文件思想数目为2个 文件单位思想为0.27752081406105455
