--- a/思想/思想.md
+++ b/思想/思想.md
@@ -8,7 +8,7 @@
 
 X
 
-A =      (A-B) $$ (B-A)      TRUE = 时间顺序（A-B）
+A =      (A-》B) && (B-〉A)      TRUE = 时间顺序（A-B）
 
 B =									   FALSE = 逻辑顺序（A->B \ B->A）
 
@@ -84,32 +84,52 @@ X
 
 ## 分析方法概论
 
+分析分为两个步骤：解构主义分析和人本主义分析
+
+解构主义分析注重通过理性方式来分析时间，利用系统学、数学等科学知识构建对事件的系统认知。
+
+人本主义分析注重行为者的人类本性，从人类的热爱熵减的本质出发，构建事件中关键因素的可视化，总结理性分析中的感性体现，分析理性分析中容易出现的感性陷阱，从而在宏观层面上为微观行为进行指导。
+
 ### 外在分析：INPUT - OUTPUT - STRCUCT 分析方法
 
-* input是什么
+### 建议使用 OUTPUT = S(INPUT)来表示
 
-* output是什么
+*等价于经济学中 内在变量外在变量 内在变量-output，外在变量-input，考虑struct时应当将input作为固定量，output作为变化量*
 
-* 事件的结构是什么
+*等价于数学中的函数 y = f(x), 其中x为input，y为output， f为structure*
 
-### 内在分析：PRINCIPLE - TRAP - BENEFIT
+
+
+* input从哪里来
+* output到哪里去
+* 事件的结构函数S是什么
+
+* 存在某个时间长度t，当一件事情达到t时output才有变化，t为事件阈值，测量某件事的事件阈值，很有必要
+
+### 内在分析：BENEFIT - PRINCIPLE - TRAP 
 
 * 痛点：产生挫败感的点
 * 原则：可以保持并且依赖的点
 * 反馈：最容易产生效果从而刺激你的点
 
+#### 反馈需要可视化
+
+1. 如何选择反馈？
+2. 如何建立反馈？
+3. 如何保持反馈？
+
 ### 迭代分析：反馈 - 观察 - 分析
 
-- 明确更好的动机或者目标或者感觉
+- 通过反馈来客观分析正反反馈
 
-  -观察正还是负反馈
+- 明确更好的动机或者目标或者感觉
 
   -反思观察 分析 决策
 
   
 
 
-### 归类分析：划分 - 分析 - 黑箱 - 体系化
+### 归类分析：划分 - 分析 - 黑箱 - 体系化 - 数学化
 
 
 
@@ -178,7 +198,7 @@ Q：一个人最多能够同时坚持多少Principle？
 ## 控制失败
 
 
-## 艺术：做事至极
+## 艺术：充分发挥自己的情感
 
 * 极致的技术
 * 极致的情感
@@ -212,7 +232,7 @@ Q：一个人最多能够同时坚持多少Principle？
 
 也就是说很多的理论你很难分清楚其中的input output struc结构。但是可以进行一定程度的抽象。
 
-比如说做笔记的生琢概念，其实就可以抽象成做事情要把握核心，不断生长的该你啊。但是我们还是可以去思考其一般性。其实这是类似生物进化的逻辑，但是有区别，这是在明意识尚未显示的情况下，利用不断的行为去调动潜意识成为明意识的方法，其本质是将潜意识调动出来。所以根据这种分析，我们还能够查阅相关潜意识的知识，从而利用这些知识补充我们的理论。
+比如说做笔记的生琢概念，其实就可以抽象成做事情要把握核心，不断生长的概念。但是我们还是可以去思考其一般性。其实这是类似生物进化的逻辑，但是有区别，这是在明意识尚未显示的情况下，利用不断的行为去调动潜意识成为明意识的方法，其本质是将潜意识调动出来。所以根据这种分析，我们还能够查阅相关潜意识的知识，从而利用这些知识补充我们的理论。
 
 那么我们应当如何处理自己的思想体系呢？我认为应当以理论为核心进行发散思维的分析和整理，这样才能最好地去整理和分析。同时多尝试使用别的理论去整合所有理论，多尝试才能够磨合。
 
@@ -233,7 +253,4 @@ Q：一个人最多能够同时坚持多少Principle？
 
 而技术这一方面我认为我们应该把握技术和想法的比例，最好能够以想法为驱动进行学习
 
-
-
-
-
+# 文件思想数目为43个 文件单位思想为0.6349206349206349
