--- a/thoughts/思想/思想.md
+++ b/thoughts/思想/思想.md
@@ -1,4 +1,4 @@
-# 我的思想：
+# 我的价值观：
 
 
 
@@ -16,11 +16,47 @@ X
 
 ##### unfix
 
-## 生物存在价值分析：熵减
+## 公理价值观：熵减
 
-熵减
+### 定理价值观1: 人需要终极诉求
 
-## 人类行为分析
+
+
+人需要终极需求 -》人需要外在和内在的终极需求
+
+### 定理价值观2：至美心灵
+
+存在某种终极内在状态，能够让人最大化地进行熵减
+
+### 定理价值观3: 至美世界
+
+存在某种最终的世界状态，能够让人们最大化进行熵减
+
+### 定理价值观4:完美心灵
+
+因为存在至美心灵，必然存在从现在达到完美心灵的状态，即为完美心灵
+
+要相信自己处在完美心灵中，即绝对自信
+
+
+
+
+
+
+
+
+
+ ## 公理世界观：逻辑数学世界
+
+世界万物都可以用逻辑去解释、用数学去描述
+
+### 定理世界观：万物皆可被分析
+
+*内容另成笔记*
+
+#### 定理世界观：人类分析
+
+#### 定理：人类是潜意识、意识、行为相互影响的复杂系统
 
 人类的主要行为包括：
 
@@ -82,120 +118,7 @@ X
 
 * 行为：行为主要对人的潜意识会有反馈
 
-## 分析方法概论
-
-分析分为两个步骤：解构主义分析和人本主义分析
-
-解构主义分析注重通过理性方式来分析时间，利用系统学、数学等科学知识构建对事件的系统认知。
-
-人本主义分析注重行为者的人类本性，从人类的热爱熵减的本质出发，构建事件中关键因素的可视化，总结理性分析中的感性体现，分析理性分析中容易出现的感性陷阱，从而在宏观层面上为微观行为进行指导。
-
-### 外在分析：INPUT - OUTPUT - STRCUCT 分析方法
-
-### 建议使用 OUTPUT = S(INPUT)来表示
-
-*等价于经济学中 内在变量外在变量 内在变量-output，外在变量-input，考虑struct时应当将input作为固定量，output作为变化量*
-
-*等价于数学中的函数 y = f(x), 其中x为input，y为output， f为structure*
-
-
-
-* input从哪里来
-* output到哪里去
-* 事件的结构函数S是什么
-
-* 存在某个时间长度t，当一件事情达到t时output才有变化，t为事件阈值，测量某件事的事件阈值，很有必要
-
-### 内在分析：BENEFIT - PRINCIPLE - TRAP 
-
-* 痛点：产生挫败感的点
-* 原则：可以保持并且依赖的点
-* 反馈：最容易产生效果从而刺激你的点
-
-#### 反馈需要可视化
-
-1. 如何选择反馈？
-2. 如何建立反馈？
-3. 如何保持反馈？
-
-### 迭代分析：反馈 - 观察 - 分析
-
-- 通过反馈来客观分析正反反馈
-
-- 明确更好的动机或者目标或者感觉
-
-  -反思观察 分析 决策
-
-  
-
-
-### 归类分析：划分 - 分析 - 黑箱 - 体系化 - 数学化
-
-
-
-### 分析的内在分析
-
-
-#### PRINCIPLE
-
-* 链式法则：三层
-
-  ​					分析-PTB-策略
-
-  ​					或者：分析 - PTB1   -
-
-  ​								分析 - PTB2   -  A
-
-  T：链条繁杂 -》链条变得清楚可见
-
-  XA0: 分为两层，一层分析-PTB，一层PTB-A
-
-  XA1:使用图表软件处理 
-  
-  X使用基元和结构分析的方法X
-
-
-
-#### TRAP
-
-#### BENEFIT
-
-
-
-###### unfix
-
-也需要内在分析 最终决策归类
-
-
-
-##  决策方法概论
-
-Q：一个人最多能够同时坚持多少Principle？
-
-​			归类A
-
-1. 由内在分析的结论去指导我们的决策
-2. 每个步骤清晰可见
-3. X每个步骤需要一个实例去解释X
-4. 注重落实
-5. X如何执行决策？如何保证反馈和计划能够不冲突？X
-6. X决策分为长时决策、短时决策X
-
-
-
-### 划分模块的过程
-
-1. 对于事件可以被重复模块划分，则使用模块化划分
-2. 对于可以分为阶段的事件，分为阶段后模块化划分
-3. 对于未知事件，需要安排2-3个预定模块以及时间
-
-### 迭代理解的过程
-
-意识的清晰度有一个递增的过程
-
-将需要检验的理论抽象化模块化对比实验
-
-## 控制失败
+## 
 
 
 ## 艺术：充分发挥自己的情感
@@ -253,4 +176,4 @@ Q：一个人最多能够同时坚持多少Principle？
 
 而技术这一方面我认为我们应该把握技术和想法的比例，最好能够以想法为驱动进行学习
 
-# 文件思想数目为43个 文件单位思想为0.6349206349206349
+# 文件思想数目为43个 文件单位思想为0.6346458964373287
