--- a/thoughts/随笔/技术随笔.md
+++ b/thoughts/随笔/技术随笔.md
@@ -2,7 +2,9 @@
 
 我们应当从技术的本质来讨论技术，而不是从技术本身去讨论技术。
 
-当我希望找到一个方法来讲生活中一些常见事情的流程和图谱通过某种方式去记录下来的时候，我首先想到的就是自己开发一个软件，去存储这些信息。使用软件的原因是它的及时性强，能够像手机一样融入到自己的生活之中。
+当我希望找到一个方法来讲生活中一些常见事情的流程和图谱通过某种方式去记录下来的时候，我首先想到的就是自己开发一个软件，去存储这些信息。使用软件的原因是它的及时性强，能够像手机一样融入到自己的生活之中。实际上我们在优化它的易用性，我们假设人们做某件事情存在一个痛觉阈值，当使用一件事情的难度小于阈值的时候人们才会去做。我发现我的很多思想的实现都因为电子技术中的鞋底成本，所谓电子技术中的鞋底成本就是把数据传到不同平台、不同设备、不同软件中所产生的成本。就比如说流程图，我可以在一个平台得到流程图，但是我没有办法得到流程图所代表的数据，而数据是我将流程图规划到我整个时间流程的关键。同时这种数据的传导也没有办法自动化，这也增加了鞋底成本。所以我才会寄希望于自己开发软件来解决这些鞋底成本。
+
+那我们有没有可能将这种中间成本自己解决？
 
 然而我很快发现，这会十分的复杂和困难。困难点在于有很多行为和操作是很低级的操作，需要大量的时间去开发，这种开发在别的行业比如说模型行业中已经十分健全，但是在网页中基本上没有，这让我感到所做的基本上都是一些没有用的工作。
 
