--- a/thoughts/策略/托福总结.md
+++ b/thoughts/策略/托福总结.md
@@ -2,6 +2,76 @@
 
 ## 阅读part
 
+* 长短句分析、需要针对训练
+
+* 看起来简单词最为致命
+
+  * trajectory轨迹
+  * lethal致命的
+  * purport标榜
+  * carcinogen癌症
+  * backdrop背景
+  * silhouette轮廓
+  * salutary有义的
+  * barter以物易物
+  * withstand承受
+  * cohesion 凝聚力
+  * foster 培养
+  * empirical 经验主义
+  * prosocial 亲社会
+  * civic 市中心
+  * spontaneous自发的
+  * infrastructure国家的基础设施
+  * initiative主动
+  * proximity临近
+  * scenario方案
+  * viable可行的
+  * initialtive活动、计划
+  * didatic教育的说教的
+  * divergent有分歧的
+  * converging集中的
+  * bastion堡垒、防御
+  * nurtune照顾
+  * transient短暂的
+  * vulnerable脆弱的（情感上）
+  * interlocutor对话体
+  * momental短暂的
+  * deplete耗尽
+  * myraid无穷的
+  * curtail限制
+  * conherence连贯性
+  * artifact人工制造品
+  * robust壮
+  * accommodate给……提供住所
+  * facilitator调解人
+  * prompting及时的
+  * tenet信条
+  * demeanour表现
+  * superfluous多余的
+  * rehearse多余的
+  * potray描绘
+  * plurality众多
+  * constellation星座
+  * affording支持的了
+  * allotment租来的地块
+  * attentively专心地
+  * peculiar奇怪的
+  * propaganda宣传，鼓动
+  * nomenclature命名系统
+
+* 有些长词是合成词可以理解
+
+* 精读文章是当务之急
+
+  分类：
+
+  * 自然科学
+  * 人文艺术
+  * 历史考古
+  * 政治经济
+
+  
+
 * 单词意思理解有问题
 
   * 如果存在不理解单词，先理清句子成分，再把简单词汇全部弄清楚，最后推断含义
