通过修改让文件能够在windows上互通

--- a/thoughts/思想/思想.md
+++ b/thoughts/思想/思想.md
@@ -81,7 +81,7 @@ X
 
 动机 — 观察 — 分析 — 决策 — 行为 
 
-* 动机：侧重潜意识层面
+* **动机**：侧重潜意识层面
 
   * 潜意识层面：
     * 情感：
@@ -94,13 +94,13 @@ X
   * 意识层面：
     * 案例：成绩第一
 
-* 观察：侧重表层感知层面
+* **观察**：侧重表层感知层面
 
   意识体系 -》观察
 
   所以先完善意识体系有利于观察
 
-* 分析：侧重意识迭代 针对物体方面
+* **分析**：侧重意识迭代 针对物体方面
 
   XX
 
@@ -114,9 +114,9 @@ X
 
   XX
 
-* 决策：通过 X情绪X 经验、结论来安排设计自己的应对策略 针对人有机方面
+* **决策**：通过 X情绪X 经验、结论来安排设计自己的应对策略 针对人有机方面
 
-* 行为：行为主要对人的潜意识会有反馈
+* **行为**：行为主要对人的潜意识会有反馈
 
 ## 
 
@@ -176,4 +176,4 @@ X
 
 而技术这一方面我认为我们应该把握技术和想法的比例，最好能够以想法为驱动进行学习
 
-# 文件思想数目为43个 文件单位思想为0.6346458964373287
+# 文件思想数目为22个 文件单位思想为0.4640839386602098
