--- a/thoughts/策略/托福总结.md
+++ b/thoughts/策略/托福总结.md
@@ -126,3 +126,24 @@
 
 ## 写作part
 
+名字比较容易记住（重复就好），副词动词等比较抽象的词语需要带入场景记忆
+
+1. timber 木材
+2. fledged 羽翼未丰 full-fledged 成熟
+3. scrap
+4. mills
+5. thaw
+6. ponder
+7. tortuous
+8. boom
+9. paucity
+10. molecule 有机物
+11. pratically 几乎
+
+
+
+
+
+![img](/Users/sunwuyi/Documents/notes/united-states-map-with-state-names.png)
+
+# 文件思想数目为19个 文件单位思想为0.6428801028608165
