--- a/thoughts/随笔/区块链.md
+++ b/thoughts/随笔/区块链.md
@@ -2,13 +2,6 @@
 
 ## 是什么： 它是一个共享[数据库](https://baike.baidu.com/item/数据库/103728)，存储于其中的数据或信息，具有“不可伪造”“全程留痕”“可以追溯”“公开透明”“集体维护”等特征。基于这些特征，[区块链技术](https://baike.baidu.com/item/区块链技术/23686191)奠定了坚实的“信任“基础，创造了可靠的“合作”机制，具有广阔的运用前景。
 
-1. 一个存储每个人身高的区块链。
-2. 一个存储每个人对国家认知的区块链。
-3. 一个存储每个人财产信息的区块链。
-4. 一个存储每个人的婚姻状态的区块链。
-
-
-
 ## 信息链条：(狭义区块链) 确保数据不可篡改性质
 
 ### 哈希算法
@@ -28,6 +21,8 @@
 牵一发动全身：母信息改变，所有后面的信息都会改变。
 
 所以信息会很难被篡改。
+
+#### 算力限制
 
 
 
@@ -52,6 +47,8 @@
 非对称solution：你和我联系之后，我将我的带锁箱子寄给你，你将快递锁在箱子之后一起寄给我，我使用自己的钥匙打开。
 
 完全没有截胡钥匙的风险。
+
+#### 限制：算力
 
 #### 应用场景
 
@@ -109,4 +106,4 @@ http://thesecretlivesofdata.com/raft/
 
 ## 将上述内容整合一下举个例子
 
-分布式农庄 
+# 文件思想数目为2个 文件单位思想为0.08068854222700376
