--- a/thoughts/随笔/游戏随笔.md
+++ b/thoughts/随笔/游戏随笔.md
@@ -28,4 +28,4 @@
 
 这是我们这个时代真正的需要做的事情：我们需要构建一个新的宏观叙事，让各个行业的人能够更好地沟通，减少不同领域之间的知识偏差所造成的壁垒。
 
-需要摒弃的是个人主义或者说侠的思想，它让我们做许多事情会付出更多的成本。我们需要的是沟通、只有这样我们才能够减少这种壁垒。
+# 文件思想数目为-1个 文件单位思想为0.0
