--- a/thoughts/随笔/观《王冠》随笔：.md
+++ b/thoughts/随笔/观《王冠》随笔：.md
@@ -33,4 +33,4 @@ ted演讲，丹·吉伯特，You Are Always Changing. https://v.youku.com/v_show
 如果想要量化这种期望对现实的影响，一是这种期望的程度，二是这种期望的可持续性有多大。拿英国君主立宪制度举例，人们对君主立宪的期望可以是好的，但由于苏伊士危机、国家经济等要素，人民不但会影响期望，也会影响期望的可持续性，最终导致君主立宪的危机。
 
 
-
+# 文件思想数目为0个 文件单位思想为0.026896180742334585
