--- a/thoughts/随笔/随笔 - 爬树摔跤 - 打破社会常规的一些思考.md
+++ b/thoughts/随笔/随笔 - 爬树摔跤 - 打破社会常规的一些思考.md
@@ -14,4 +14,4 @@
 
 我同时也发现我们其实被社会同化了很多，社会和学校就像肖申克的救赎中的那个监狱，在关着我们的同时让我们对它们产生了依赖，让我们脱离了真实的感觉，让我们产生了虚幻的安全感、恐惧感、兴奋感。
 
-同时我发现这种打破社会常规的行为对一个人的意义构建产生了很大意义，一个是因为这种有低信息熵的行为让我们让我们的行为意义很好定义，同时痛苦这种很有刺激感受的行为很像辣味，让我们感受到意义。（我想到时间所有好的感受是不是都可以归为甜味、辣味等等）。
+# 文件思想数目为1个 文件单位思想为0.09615384615384616
